--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "git://github.com/zordius/https-scan.git"
   },
   "dependencies": {
-    "phantomjs": "~1.9.7-1"
+    "phantomjs": "~1.9.7-1",
+    "nopt": "~2.2.0"
   },
   "bin": {
     "https-scan": "./bin/https-scan"
