--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "url": "git://github.com/zordius/https-scan.git"
   },
   "dependencies": {
-    "phantomjs": "~1.9.7-1",
-    "nopt": "~2.2.0",
-    "async": "~0.2.10"
+    "phantomjs": "1.9.7-8",
+    "nopt": "3.0.0",
+    "async": "0.9.0"
   },
   "bin": {
     "https-scan": "./bin/https-scan"
